detail documentation and fix invalid id
