# request_handlers/events/detail.go
@@ -1,6 +1,8 @@
 package events
 
 import (
+	"database/sql"
+	"errors"
 	"net/http"
 	"strconv"
 
@@ -8,6 +10,14 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
+// Detail ... Get event detail
+// @Summary Get event detail
+// @Description Get event detail
+// @Tags Events
+// @param id path string true "Event ID"
+// @Success 200 {object} events.EventDetail
+// @Failure 404,400,500 {object} responses.MyError
+// @Router /events/{id} [get]
 func Detail(c echo.Context) error {
 	id, err := strconv.Atoi(c.Param("id"))
 	if err != nil {
@@ -17,7 +27,10 @@ func Detail(c echo.Context) error {
 	event, err := events.Detail(int64(id))
 
 	if err != nil {
-		return echo.NewHTTPError(http.StatusInternalServerError, err.Error())
+		if err == sql.ErrNoRows {
+			return echo.NewHTTPError(http.StatusNotFound, errors.New("Invalid Id").Error())
+		}
+		return echo.NewHTTPError(http.StatusBadRequest, err.Error())
 	}
 
 	return c.JSON(http.StatusOK, event)
